--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   academico:
     build: ./academico
@@ -16,6 +14,9 @@ services:
       - "8082:8080"
     networks:
       - app-net
+    depends_on:
+      - usuario
+      - academico
 
   reporte:
     build: ./reporte
