--- a/reporte/Dockerfile
+++ b/reporte/Dockerfile
@@ -1,5 +1,4 @@
-# reporte/Dockerfile
 FROM openjdk:17-jdk-slim
-VOLUME /tmp
+WORKDIR /app
 COPY target/reporte-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
