--- a/usuario/Dockerfile
+++ b/usuario/Dockerfile
@@ -1,5 +1,4 @@
-# usuario/Dockerfile
 FROM openjdk:17-jdk-slim
-VOLUME /tmp
+WORKDIR /app
 COPY target/usuario-0.0.1-SNAPSHOT.jar app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","app.jar"]
