microservicio de usuario y matricula unidos

--- a/academico/src/main/resources/application.properties
+++ b/academico/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=academico
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+server.port=8081
+server.address=0.0.0.0
