--- a/matricula/src/main/resources/application.properties
+++ b/matricula/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=matricula
+management.endpoints.web.exposure.include=health,info,mappings
+# matricula
+server.port=8080
+server.address=0.0.0.0
